--- a/Everything/Everything/Base.lproj/Main.storyboard
+++ b/Everything/Everything/Base.lproj/Main.storyboard
@@ -4,6 +4,40 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
+        <!--ScreenShot-->
+        <scene sceneID="faq-2P-ksH">
+            <objects>
+                <viewController storyboardIdentifier="ScreenShotSBID" id="JZh-Qs-yrA" customClass="ScreenShotViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="N1W-wv-RbF"/>
+                        <viewControllerLayoutGuide type="bottom" id="p2H-85-6pi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AcL-cS-B8L">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Screen Shot will get notified with notification named 'UIApplicationUserDidTakeScreenshotNotification'." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="d7r-VU-BLh">
+                                <rect key="frame" x="20" y="20" width="560" height="496"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="p2H-85-6pi" firstAttribute="top" secondItem="d7r-VU-BLh" secondAttribute="bottom" constant="20" id="Ap1-wi-5wb"/>
+                            <constraint firstAttribute="trailing" secondItem="d7r-VU-BLh" secondAttribute="trailing" constant="20" id="Gwm-zz-gqQ"/>
+                            <constraint firstItem="d7r-VU-BLh" firstAttribute="leading" secondItem="AcL-cS-B8L" secondAttribute="leading" constant="20" id="Urc-bQ-xfr"/>
+                            <constraint firstItem="d7r-VU-BLh" firstAttribute="top" secondItem="N1W-wv-RbF" secondAttribute="bottom" constant="20" id="tVm-nz-gwY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="ScreenShot" id="Yhm-Mq-C08"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tfG-rO-DAm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2472" y="-360"/>
+        </scene>
         <!--Everything-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -16,7 +50,7 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="54" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xNA-xB-SxL">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="54" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xNA-xB-SxL">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <animations/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -29,6 +63,12 @@
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xNA-xB-SxL" secondAttribute="bottom" id="7Us-yt-rTl"/>
+                            <constraint firstItem="xNA-xB-SxL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EdX-9m-hUJ"/>
+                            <constraint firstItem="xNA-xB-SxL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="L40-SG-WUh"/>
+                            <constraint firstAttribute="trailing" secondItem="xNA-xB-SxL" secondAttribute="trailing" id="XLy-tl-aKA"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Everything" id="ZZ4-kO-lOv"/>
                     <connections>
@@ -57,6 +97,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h7I-uG-OhF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="233" y="1036"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="e4U-tX-WxT">
+            <objects>
+                <navigationController storyboardIdentifier="NoUseNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="zFE-1r-Rx8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="ti6-Rh-BJK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JZh-Qs-yrA" kind="relationship" relationship="rootViewController" id="AfE-tB-FBr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DFs-jA-ajj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1660" y="-360"/>
         </scene>
     </scenes>
 </document>
