--- a/Everything/Everything/Base.lproj/Main.storyboard
+++ b/Everything/Everything/Base.lproj/Main.storyboard
@@ -4,6 +4,51 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
+        <!--UIImage(Color)-->
+        <scene sceneID="N3j-57-mrt">
+            <objects>
+                <viewController storyboardIdentifier="ImageWithColorSBID" id="kXi-vG-k0d" customClass="ImageWithColorViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="l5v-oQ-h3h"/>
+                        <viewControllerLayoutGuide type="bottom" id="67x-xS-upe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kXO-aD-U4L">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1pm-4Q-mlK">
+                                <rect key="frame" x="180" y="20" width="240" height="120"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="QnC-aZ-ODp"/>
+                                    <constraint firstAttribute="width" constant="240" id="eJI-0l-hy4"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="1pm-4Q-mlK" secondAttribute="trailing" constant="20" id="6H6-36-yHE"/>
+                            <constraint firstItem="1pm-4Q-mlK" firstAttribute="leading" secondItem="kXO-aD-U4L" secondAttribute="leading" constant="20" id="7m3-Yd-oHd"/>
+                            <constraint firstItem="1pm-4Q-mlK" firstAttribute="top" secondItem="l5v-oQ-h3h" secondAttribute="bottom" constant="20" id="816-yW-lik"/>
+                            <constraint firstItem="1pm-4Q-mlK" firstAttribute="centerX" secondItem="kXO-aD-U4L" secondAttribute="centerX" id="hWr-vW-Ozq"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="6H6-36-yHE"/>
+                                <exclude reference="7m3-Yd-oHd"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="UIImage(Color)" id="m0L-Dy-XFF"/>
+                    <connections>
+                        <outlet property="imageView" destination="1pm-4Q-mlK" id="HuM-vs-gBS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AEG-RR-Ku7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2472" y="-1136"/>
+        </scene>
         <!--ScreenShot-->
         <scene sceneID="faq-2P-ksH">
             <objects>
@@ -101,7 +146,7 @@
         <!--Navigation Controller-->
         <scene sceneID="e4U-tX-WxT">
             <objects>
-                <navigationController storyboardIdentifier="NoUseNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="zFE-1r-Rx8" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="ScreenShotNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="zFE-1r-Rx8" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="ti6-Rh-BJK">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -116,6 +161,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DFs-jA-ajj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1660" y="-360"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="McF-xJ-mK0">
+            <objects>
+                <navigationController storyboardIdentifier="ImageWithColorNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="5Ds-nX-N49" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="kG9-an-Lfv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="kXi-vG-k0d" kind="relationship" relationship="rootViewController" id="ofs-tk-Utx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="afT-r7-olQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1660" y="-1136"/>
         </scene>
     </scenes>
 </document>
