--- a/Everything/Everything/Base.lproj/Main.storyboard
+++ b/Everything/Everything/Base.lproj/Main.storyboard
@@ -4,6 +4,73 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
+        <!--Speak-->
+        <scene sceneID="aow-cc-C9q">
+            <objects>
+                <viewController storyboardIdentifier="SpeakSBID" id="hUN-BH-AaW" customClass="SpeakViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zb7-TK-1GJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="Yi8-RZ-m6m"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MtL-j3-y9Y">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WPQ-nK-MeA">
+                                <rect key="frame" x="20" y="20" width="502" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="3CE-Vm-O2W"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Default language is English(en_US)." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UnO-KD-l54">
+                                <rect key="frame" x="20" y="58" width="560" height="25"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="6fw-8D-JqH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WpI-qm-HCN">
+                                <rect key="frame" x="530" y="20" width="50" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.85438603940000002" green="0.85438603940000002" blue="0.85438603940000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="MEg-uR-7HE"/>
+                                    <constraint firstAttribute="width" constant="50" id="Ska-kN-R3U"/>
+                                </constraints>
+                                <state key="normal" title="Speak"/>
+                                <connections>
+                                    <action selector="speak:" destination="hUN-BH-AaW" eventType="touchUpInside" id="XNT-cN-EJo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="WpI-qm-HCN" secondAttribute="trailing" constant="20" id="05x-YP-Pzc"/>
+                            <constraint firstItem="WpI-qm-HCN" firstAttribute="top" secondItem="zb7-TK-1GJ" secondAttribute="bottom" constant="20" id="2gT-2b-0AY"/>
+                            <constraint firstItem="WpI-qm-HCN" firstAttribute="leading" secondItem="WPQ-nK-MeA" secondAttribute="trailing" constant="8" id="4CK-GW-kT1"/>
+                            <constraint firstItem="UnO-KD-l54" firstAttribute="leading" secondItem="MtL-j3-y9Y" secondAttribute="leading" constant="20" id="Zo8-hT-bn1"/>
+                            <constraint firstItem="WPQ-nK-MeA" firstAttribute="top" secondItem="zb7-TK-1GJ" secondAttribute="bottom" constant="20" id="fxo-iJ-seK"/>
+                            <constraint firstItem="WPQ-nK-MeA" firstAttribute="leading" secondItem="MtL-j3-y9Y" secondAttribute="leading" constant="20" id="ne1-67-djS"/>
+                            <constraint firstAttribute="trailing" secondItem="UnO-KD-l54" secondAttribute="trailing" constant="20" id="rcK-mG-IQH"/>
+                            <constraint firstItem="UnO-KD-l54" firstAttribute="top" secondItem="WpI-qm-HCN" secondAttribute="bottom" constant="8" id="zMS-Wp-ukE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Speak" id="wwc-sI-3Av"/>
+                    <connections>
+                        <outlet property="textField" destination="WPQ-nK-MeA" id="4cU-op-yYU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zgk-aV-gNq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2954" y="-1941"/>
+        </scene>
         <!--UIImage(Color)-->
         <scene sceneID="N3j-57-mrt">
             <objects>
@@ -47,7 +114,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AEG-RR-Ku7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2472" y="-1136"/>
+            <point key="canvasLocation" x="2954" y="-1164"/>
         </scene>
         <!--ScreenShot-->
         <scene sceneID="faq-2P-ksH">
@@ -81,7 +148,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tfG-rO-DAm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2472" y="-360"/>
+            <point key="canvasLocation" x="2954" y="-388"/>
         </scene>
         <!--Everything-->
         <scene sceneID="tne-QT-ifu">
@@ -122,7 +189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1152" y="376"/>
+            <point key="canvasLocation" x="1292" y="370"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="MvU-68-ZR0">
@@ -160,7 +227,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DFs-jA-ajj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1660" y="-360"/>
+            <point key="canvasLocation" x="2142" y="-388"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="McF-xJ-mK0">
@@ -179,7 +246,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="afT-r7-olQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1660" y="-1136"/>
+            <point key="canvasLocation" x="2142" y="-1164"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JaY-PQ-WTw">
+            <objects>
+                <navigationController storyboardIdentifier="SpeakNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="FbB-Ff-KHt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="YP3-a2-xj0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hUN-BH-AaW" kind="relationship" relationship="rootViewController" id="mr7-c9-3vk"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UAK-Z3-l2H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2142" y="-1941"/>
         </scene>
     </scenes>
 </document>
