--- a/Everything/Everything/Base.lproj/Main.storyboard
+++ b/Everything/Everything/Base.lproj/Main.storyboard
@@ -344,6 +344,46 @@
             </objects>
             <point key="canvasLocation" x="2142" y="-2778"/>
         </scene>
+        <!--TableWithCopyCell-->
+        <scene sceneID="okd-1J-oqk">
+            <objects>
+                <viewController storyboardIdentifier="TableWithCopyCellSBID" id="6OO-gV-AWk" customClass="TableWithCopyCellViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fzj-0H-FkG"/>
+                        <viewControllerLayoutGuide type="bottom" id="ynT-qc-tWv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="30Q-55-Hek">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7IL-iZ-vgP">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="6OO-gV-AWk" id="B6A-AE-DWs"/>
+                                    <outlet property="delegate" destination="6OO-gV-AWk" id="TnQ-bk-e1f"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ynT-qc-tWv" firstAttribute="top" secondItem="7IL-iZ-vgP" secondAttribute="bottom" id="EZr-IO-IOy"/>
+                            <constraint firstAttribute="trailing" secondItem="7IL-iZ-vgP" secondAttribute="trailing" id="cr4-1Y-PHQ"/>
+                            <constraint firstItem="7IL-iZ-vgP" firstAttribute="leading" secondItem="30Q-55-Hek" secondAttribute="leading" id="gi6-lX-laX"/>
+                            <constraint firstItem="7IL-iZ-vgP" firstAttribute="top" secondItem="fzj-0H-FkG" secondAttribute="bottom" id="w0r-2X-DGE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="TableWithCopyCell" id="bp2-Hp-CA9"/>
+                    <connections>
+                        <outlet property="tableView" destination="7IL-iZ-vgP" id="I6h-yz-qey"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C3G-ee-FuR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2954" y="-4514"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="L15-8G-8ow">
             <objects>
@@ -362,6 +402,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rgy-3T-hjE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2142" y="-3688"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eXK-IO-g27">
+            <objects>
+                <navigationController storyboardIdentifier="TableWithCopyCellNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="XdN-La-b9R" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="1jt-fX-tab">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6OO-gV-AWk" kind="relationship" relationship="rootViewController" id="BCG-R4-VMC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0FX-sN-32j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2142" y="-4514"/>
         </scene>
     </scenes>
 </document>
