--- a/Everything/Everything/Base.lproj/Main.storyboard
+++ b/Everything/Everything/Base.lproj/Main.storyboard
@@ -460,6 +460,68 @@
             </objects>
             <point key="canvasLocation" x="2142" y="-4514"/>
         </scene>
+        <!--Draw-->
+        <scene sceneID="wuI-cH-MuQ">
+            <objects>
+                <viewController storyboardIdentifier="DrawSBID" id="NFI-wj-pvg" customClass="DrawViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WUb-pb-FlZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="uSq-JS-Pjx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tC0-tv-riD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vkE-f0-zoh">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="NFI-wj-pvg" id="KtS-rI-V9O"/>
+                                    <outlet property="delegate" destination="NFI-wj-pvg" id="xLb-XH-o6W"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="vkE-f0-zoh" secondAttribute="trailing" id="bPg-zu-dER"/>
+                            <constraint firstItem="uSq-JS-Pjx" firstAttribute="top" secondItem="vkE-f0-zoh" secondAttribute="bottom" id="f9S-kK-tNJ"/>
+                            <constraint firstItem="vkE-f0-zoh" firstAttribute="leading" secondItem="tC0-tv-riD" secondAttribute="leading" id="gv8-qI-N4w"/>
+                            <constraint firstItem="vkE-f0-zoh" firstAttribute="top" secondItem="WUb-pb-FlZ" secondAttribute="bottom" id="nZl-8u-U8B"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="vkE-f0-zoh"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="f9S-kK-tNJ"/>
+                                <exclude reference="bPg-zu-dER"/>
+                                <exclude reference="gv8-qI-N4w"/>
+                                <exclude reference="nZl-8u-U8B"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="vkE-f0-zoh"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="f9S-kK-tNJ"/>
+                                <include reference="bPg-zu-dER"/>
+                                <include reference="gv8-qI-N4w"/>
+                                <include reference="nZl-8u-U8B"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="Draw" id="bmy-Cu-lIA"/>
+                    <connections>
+                        <outlet property="tableView" destination="vkE-f0-zoh" id="sWE-VO-cCP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bsZ-BI-H2L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2953.5" y="-7677.75"/>
+        </scene>
         <!--Capture-->
         <scene sceneID="sBe-7G-8r5">
             <objects>
@@ -469,6 +531,7 @@
                         <viewControllerLayoutGuide type="bottom" id="H2p-m4-d5h"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="xQn-VX-Fxq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Yx2-Ft-nhk">
@@ -494,10 +557,10 @@
                                 <exclude reference="Yx2-Ft-nhk"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="Vdt-AF-dtn"/>
                                 <exclude reference="2Cf-Gy-rN7"/>
                                 <exclude reference="Y1h-hg-3BD"/>
                                 <exclude reference="d8H-CH-wt9"/>
-                                <exclude reference="Vdt-AF-dtn"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -505,10 +568,10 @@
                                 <include reference="Yx2-Ft-nhk"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="Vdt-AF-dtn"/>
                                 <include reference="2Cf-Gy-rN7"/>
                                 <include reference="Y1h-hg-3BD"/>
                                 <include reference="d8H-CH-wt9"/>
-                                <include reference="Vdt-AF-dtn"/>
                             </mask>
                         </variation>
                     </view>
@@ -709,6 +772,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hHk-5G-Nj5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2142" y="-6891"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4tt-bN-2VE">
+            <objects>
+                <navigationController storyboardIdentifier="DrawNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="Sua-lE-9zt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="4Lc-6t-zIR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="NFI-wj-pvg" kind="relationship" relationship="rootViewController" id="nlq-I9-9rV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IsK-8R-cNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2142" y="-7677.75"/>
         </scene>
     </scenes>
 </document>
