--- a/Everything/Everything/Base.lproj/Main.storyboard
+++ b/Everything/Everything/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dVx-Eu-nPz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dVx-Eu-nPz">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -531,6 +531,25 @@
             </objects>
             <point key="canvasLocation" x="2953.5" y="-8457.75"/>
         </scene>
+        <!--Detect Volume View Controller-->
+        <scene sceneID="e5t-hl-ncK">
+            <objects>
+                <viewController storyboardIdentifier="DetectVolumeSBID" id="l2t-vM-tCO" customClass="DetectVolumeViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sIb-wa-zOu"/>
+                        <viewControllerLayoutGuide type="bottom" id="6tD-h0-X4F"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XYD-84-mZK">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ynk-QD-gdq"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sUd-qJ-v7L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2941.5" y="-9206.25"/>
+        </scene>
         <!--Draw-->
         <scene sceneID="wuI-cH-MuQ">
             <objects>
@@ -881,6 +900,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="So6-E9-Rt0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2142" y="-8457.75"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kGV-3A-owc">
+            <objects>
+                <navigationController storyboardIdentifier="DetectVolumeNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="Baa-t1-0Lb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="4Bd-h9-ooU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="l2t-vM-tCO" kind="relationship" relationship="rootViewController" id="rwZ-u0-vAQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ADI-BG-985" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2131.5" y="-9206.25"/>
         </scene>
     </scenes>
 </document>
